refactor: CustomerCouponStatistics 분리